@@ -2,7 +2,7 @@
 
 # Form implementation generated from reading ui file './ag/orbit/gui/qt/main.ui'
 #
-# Created by: PyQt5 UI code generator 5.10.1
+# Created by: PyQt5 UI code generator 5.7.1
 #
 # WARNING! All changes made in this file will be lost!
 
@@ -51,6 +51,7 @@ class Ui_Main(object):
         self.splash = QtWidgets.QWidget()
         self.splash.setObjectName("splash")
         self.verticalLayout_3 = QtWidgets.QVBoxLayout(self.splash)
+        self.verticalLayout_3.setContentsMargins(0, 0, 0, 0)
         self.verticalLayout_3.setObjectName("verticalLayout_3")
         spacerItem = QtWidgets.QSpacerItem(20, 40, QtWidgets.QSizePolicy.Minimum, QtWidgets.QSizePolicy.Expanding)
         self.verticalLayout_3.addItem(spacerItem)
@@ -83,12 +84,14 @@ class Ui_Main(object):
         self.page_2 = QtWidgets.QWidget()
         self.page_2.setObjectName("page_2")
         self.verticalLayout_4 = QtWidgets.QVBoxLayout(self.page_2)
+        self.verticalLayout_4.setContentsMargins(0, 0, 0, 0)
         self.verticalLayout_4.setObjectName("verticalLayout_4")
         self.tabWidget = QtWidgets.QTabWidget(self.page_2)
         self.tabWidget.setObjectName("tabWidget")
         self.tab = QtWidgets.QWidget()
         self.tab.setObjectName("tab")
         self.verticalLayout_2 = QtWidgets.QVBoxLayout(self.tab)
+        self.verticalLayout_2.setContentsMargins(0, 0, 0, 0)
         self.verticalLayout_2.setObjectName("verticalLayout_2")
         self.horizontalLayout_3 = QtWidgets.QHBoxLayout()
         self.horizontalLayout_3.setObjectName("horizontalLayout_3")
@@ -182,7 +185,7 @@ class Ui_Main(object):
         self.verticalLayout.addWidget(self.error)
         Main.setCentralWidget(self.centralwidget)
         self.menu = QtWidgets.QMenuBar(Main)
-        self.menu.setGeometry(QtCore.QRect(0, 0, 633, 36))
+        self.menu.setGeometry(QtCore.QRect(0, 0, 633, 22))
         self.menu.setObjectName("menu")
         self.menuFile = QtWidgets.QMenu(self.menu)
         self.menuFile.setObjectName("menuFile")
@@ -190,6 +193,10 @@ class Ui_Main(object):
         self.menuHelp.setObjectName("menuHelp")
         self.menuWallet = QtWidgets.QMenu(self.menu)
         self.menuWallet.setObjectName("menuWallet")
+        self.menuNetwork = QtWidgets.QMenu(self.menu)
+        self.menuNetwork.setObjectName("menuNetwork")
+        self.menuBitCash = QtWidgets.QMenu(self.menuNetwork)
+        self.menuBitCash.setObjectName("menuBitCash")
         Main.setMenuBar(self.menu)
         self.status = QtWidgets.QStatusBar(Main)
         self.status.setObjectName("status")
@@ -216,6 +223,22 @@ class Ui_Main(object):
         self.actionClose.setObjectName("actionClose")
         self.actionSet_Password = QtWidgets.QAction(Main)
         self.actionSet_Password.setObjectName("actionSet_Password")
+        self.actionBitPay = QtWidgets.QAction(Main)
+        self.actionBitPay.setCheckable(True)
+        self.actionBitPay.setChecked(True)
+        self.actionBitPay.setEnabled(False)
+        self.actionBitPay.setObjectName("actionBitPay")
+        self.actionBlockDozer = QtWidgets.QAction(Main)
+        self.actionBlockDozer.setCheckable(True)
+        self.actionBlockDozer.setChecked(True)
+        self.actionBlockDozer.setEnabled(False)
+        self.actionBlockDozer.setObjectName("actionBlockDozer")
+        self.actionPeers = QtWidgets.QAction(Main)
+        self.actionPeers.setEnabled(False)
+        self.actionPeers.setObjectName("actionPeers")
+        self.actionPool = QtWidgets.QAction(Main)
+        self.actionPool.setEnabled(False)
+        self.actionPool.setObjectName("actionPool")
         self.menuFile.addAction(self.actionQuit)
         self.menuHelp.addAction(self.actionAbout)
         self.menuWallet.addAction(self.actionNew)
@@ -228,8 +251,14 @@ class Ui_Main(object):
         self.menuWallet.addAction(self.actionShow_Key)
         self.menuWallet.addSeparator()
         self.menuWallet.addAction(self.actionRemove)
+        self.menuBitCash.addAction(self.actionBitPay)
+        self.menuBitCash.addAction(self.actionBlockDozer)
+        self.menuNetwork.addAction(self.menuBitCash.menuAction())
+        self.menuNetwork.addAction(self.actionPeers)
+        self.menuNetwork.addAction(self.actionPool)
         self.menu.addAction(self.menuFile.menuAction())
         self.menu.addAction(self.menuWallet.menuAction())
+        self.menu.addAction(self.menuNetwork.menuAction())
         self.menu.addAction(self.menuHelp.menuAction())
 
         self.retranslateUi(Main)
@@ -267,6 +296,8 @@ class Ui_Main(object):
         self.menuFile.setTitle(_translate("Main", "&File"))
         self.menuHelp.setTitle(_translate("Main", "&Help"))
         self.menuWallet.setTitle(_translate("Main", "&Wallet"))
+        self.menuNetwork.setTitle(_translate("Main", "Network"))
+        self.menuBitCash.setTitle(_translate("Main", "BitCash"))
         self.actionQuit.setText(_translate("Main", "&Quit"))
         self.actionQuit.setShortcut(_translate("Main", "Alt+F4"))
         self.actionAbout.setText(_translate("Main", "&About"))
@@ -277,6 +308,10 @@ class Ui_Main(object):
         self.actionRemove.setText(_translate("Main", "&Delete..."))
         self.actionClose.setText(_translate("Main", "&Close"))
         self.actionSet_Password.setText(_translate("Main", "&Set Password..."))
+        self.actionBitPay.setText(_translate("Main", "BitPay"))
+        self.actionBlockDozer.setText(_translate("Main", "BlockDozer"))
+        self.actionPeers.setText(_translate("Main", "Peers"))
+        self.actionPool.setText(_translate("Main", "Pool..."))
 
 from . import icons_rc
 from . import images_rc
