@@ -1,6 +1,8 @@
 Copyright (C) 2018 Alpha Griffin
 @%@~LICENSE~@%@
 
+saw_083018_1 - Change relative imports to absolute (Windows). Add network menu.
+
 saw_082118_1 - BCH send is functional.
 
 saw_082018_1 - BCH balance and receive are functional.
